2008-09-04 Jens Tkotz <jens@peino.de> 1.5.9-svn-b22

 * Fix: &amp; in new Password link caused a invalid request message.

2008-09-04 Jens Tkotz <jens@peino.de> 1.5.9-svn-b21

 * Fix: Added missing function in lib/album.php

2008-09-03 Jens Tkotz <jens@peino.de> 1.5.9-svn-b20

 * FIX: Move and reorder for main albums were gone ?!?

 * Fix: Typo in stats.header

   Thanks to Piploff from forum for reporting these bugs.

 * Fix: Mail-links to owner in stats were bad HTML.

 * Change: Use gSubmit in find_orphans.php 

 * Change: Increased length for albumnames that get truncated in
           select boxes for reorder and move.

 * Fix: Get only albumcommand for rootalbums on mainpage.

2008-09-03 Jens Tkotz <jens@peino.de> 1.5.9-svn-b19

 * Fix: Moving a subalbum to toplevel broken.

   Thanks to piploff from forum.

2008-09-02 Jens Tkotz <jens@peino.de> 1.5.9-svn-b18

 * Fix: Imagemap
	- Position of Image were got wrong in IE with horizontal scrolling.
	- Init of canvas was done to early, broke display of maps in IE.

   Thanks to "Spack" from the forums for reporting this.

 * Change: Layout and buttons/actions for Imagemap page.

 * Change: Only add automatic ALT tag for images if its not set manual.
           Setting to '' IS a manual value now, which means empty ALT text.

2008-09-02 Jens Tkotz <jens@peino.de> 1.5.9-svn-b17

 * New: Added arrowkey navigation for microthumbs.

 * Fix: Don't show blue adminbox in photoview
	when user has chosen a background color for albums.

2008-08-31 Jens Tkotz <jens@peino.de> 1.5.9-svn-b16

 * Fix: Use textfield again in phpNuke for ImageMap description.
        Broke that in b12.
        
2008-08-30 Jens Tkotz <jens@peino.de> 1.5.9-svn-b15

 Change: 1.5.9 icon.

 Fix: Some wordings.
      Thanks to Julien.

2008-08-30 Jens Tkotz <jens@peino.de> 1.5.9-svn-b14

 * Change: Reenabled KOI8-R

 * Change: Removed some unneeded PHP version check in isSupportedCharset
           as the minimum PHP is 4.1.0
